# pos-printer-driver

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md
crates/napi-binding/: Cargo.toml  README.md  index.js  package-lock.json  package.json
crates/napi-binding/src/: lib.rs
crates/napi-binding/tests/: panic_test.js
crates/protocol/: Cargo.toml
crates/protocol/src/: barcode.rs  builder.rs  codepage.rs  image.rs  lib.rs  qr.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs  serial.rs  tcp.rs  usb.rs
crates/transport/tests/: tcp_mock_test.rs
examples/node/: serial-example.js  tcp-example.js  usb-example.js
